# EtaEtaPrime

./: .gitignore  Makefile  fileio.py  readAMA.c  readAMA.py
docs/: Makefile  conf.py  etaetaprime.rst  fastfunctions.rst  fileio.rst  index.rst  make.bat  modules.rst  readAMA.rst
etaetaprime/: __init__.py  ama.py  correlators.py  fileio.py  measurements.py  minimizers.py
etaetaprime/fastfunctions/: CMakeLists.txt  combinatorics.pyx  fastread.cpp
etaetaprime/test/: test_etaetaprime.py
etaetaprime/test/data/: connected_test_data
fastfunctions/: README.md  converters.pyx
