cmake_minimum_required (VERSION 2.6)
project (fastread)

set (SRC fastread.cpp)

find_package (PythonLibs 2.6 REQUIRED)
find_package (Boost 1.46.0 REQUIRED)

include_directories (${Boost_INCLUDE_DIRS}
  ${PYTHON_INCLUDE_PATH}
  ${CUSP_INCLUDE_DIR})

set (Boost_USE_STATIC_LIBS OFF)
set (Boost_USE_STATIC_RUNTIME OFF)
find_package (Boost COMPONENTS python)

set (CMAKE_SHARED_LIBRARY_PREFIX "")

add_library (fastread SHARED ${SRC})
target_link_libraries (fastread ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

IF(CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS("-O3")
ENDIF()
IF(CMAKE_COMPILER_IS_MSVC)
  ADD_DEFINITIONS("/O2")
ENDIF()
IF(UNIX AND NOT WIN32)
  FIND_PROGRAM(CMAKE_UNAME uname /bin /usr/bin /usr/local/bin )
  IF(CMAKE_UNAME)
    EXEC_PROGRAM(uname ARGS -m OUTPUT_VARIABLE CMAKE_SYSTEM_PROCESSOR)
    SET(CMAKE_SYSTEM_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR} CACHE INTERNAL
"processor type (i386 and x86_64)")
    IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
      ADD_DEFINITIONS(-fPIC)
    ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  ENDIF(CMAKE_UNAME)
ENDIF(UNIX AND NOT WIN32)
